change to ChuyenSo method and add remove whitespaces extension method

--- a/MinhHelper.csproj
+++ b/MinhHelper.csproj
@@ -42,7 +42,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CurrencyHelper.cs" />
+    <Compile Include="CurrencyUnit.cs" />
+    <Compile Include="NationalCurrency.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringHelper.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
